k8s/east/profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    autopilot.gke.io/resource-adjustment: '{"input":{"containers":[{"name":"profile-service-sha256-1"}]},"output":{"containers":[{"limits":{"ephemeral-storage":"1Gi"},"requests":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"2Gi"},"name":"profile-service-sha256-1"}]},"computeClassAtAdmission":"Default","modified":true}'
    autopilot.gke.io/warden-version: 35.15.0-gke.1
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"autopilot.gke.io/resource-adjustment":"{\"input\":{\"containers\":[{\"name\":\"profile-service-sha256-1\"}]},\"output\":{\"containers\":[{\"limits\":{\"ephemeral-storage\":\"1Gi\"},\"requests\":{\"cpu\":\"500m\",\"ephemeral-storage\":\"1Gi\",\"memory\":\"2Gi\"},\"name\":\"profile-service-sha256-1\"}]},\"computeClassAtAdmission\":\"Default\",\"modified\":true}","autopilot.gke.io/warden-version":"35.15.0-gke.1","deployme [...]
  creationTimestamp: "2026-04-30T05:18:56Z"
  generation: 13
  labels:
    app: profile-service
    app.kubernetes.io/managed-by: cloud-console
  name: profile-service
  namespace: default
  resourceVersion: "1777791925939279020"
  uid: 510c6b14-873d-499f-b44f-6380bd75e9b2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: profile-service
      app.kubernetes.io/managed-by: cloud-console
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: profile-service
        app.kubernetes.io/managed-by: cloud-console
    spec:
      containers:
      - env:
        - name: ORDER_SERVICE_URL
          valueFrom:
            configMapKeyRef:
              key: ORDER_SERVICE_URL
              name: profile-service-config-mnmn
        image: us-central1-docker.pkg.dev/gke-sre-demo/app-repo/profile-service@sha256:12c15e8f0a5bac6a46900442e9fc30cc034566a538b620ca146a6b66f7de1af8
        imagePullPolicy: IfNotPresent
        name: profile-service-sha256-1
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 100m
            ephemeral-storage: 1Gi
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-03T02:35:42Z"
    lastUpdateTime: "2026-05-03T02:35:42Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-30T05:18:56Z"
    lastUpdateTime: "2026-05-03T07:05:25Z"
    message: ReplicaSet "profile-service-79844d66f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 13
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
