k8s/east/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: gce
    ingress.gcp.kubernetes.io/healthcheck-path: /health

spec:
  rules:
    - http:
        paths:
          - path: /profiles
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80

          - path: /profile-orders
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
